[dyad] Corrigido package.json para projeto Remix - wrote 1 file(s)

--- a/package.json
+++ b/package.json
@@ -1,24 +1,109 @@
 {
-  "name": "nextn",
-  "version": "0.1.0",
+  "name": "bolt.diy",
   "private": true,
+  "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "dev": "next dev -p 9002",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "next": "15.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@ai-sdk/anthropic": "^0.0.28",
+    "@ai-sdk/google": "^0.0.20",
+    "@ai-sdk/mistral": "^0.0.20",
+    "@ai-sdk/openai": "^0.0.38",
+    "@ai-sdk/react": "^0.0.20",
+    "@ai-sdk/ui-utils": "^0.0.12",
+    "@codemirror/autocomplete": "^6.17.0",
+    "@codemirror/commands": "^6.6.0",
+    "@codemirror/language": "^6.10.2",
+    "@codemirror/search": "^6.5.6",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/view": "^6.28.2",
+    "@nanostores/react": "^0.7.2",
+    "@openrouter/ai-sdk-provider": "^0.0.6",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@remix-run/cloudflare": "^2.10.3",
+    "@remix-run/cloudflare-pages": "^2.10.3",
+    "@remix-run/dev": "^2.10.3",
+    "@remix-run/node": "^2.10.3",
+    "@remix-run/react": "^2.10.3",
+    "@remix-run/serve": "^2.10.3",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
+    "ai": "^3.2.37",
+    "chalk": "^5.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "diff": "^5.2.0",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^11.3.19",
+    "ignore": "^5.3.1",
+    "isbot": "^5.1.12",
+    "isomorphic-git": "^1.27.0",
+    "istextorbinary": "^6.0.0",
+    "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.416.0",
+    "mime": "^4.0.4",
+    "nanostores": "^0.10.3",
+    "octokit": "^4.0.2",
+    "ollama-ai-provider": "^0.1.10",
+    "path-browserify": "^1.0.1",
+    "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-qrcode-logo": "^3.0.0",
+    "react-resizable-panels": "^2.0.22",
+    "react-toastify": "^10.0.5",
+    "react-window": "^1.8.10",
+    "remix-island": "^0.0.6",
+    "remix-utils": "^7.6.0",
+    "shiki": "^1.11.1",
+    "tailwind-merge": "^2.4.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.3.3"
+    "@cloudflare/workers-types": "^4.20240529.0",
+    "@remix-run/eslint-config": "^2.10.3",
+    "@types/diff": "^5.2.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/js-cookie": "^3.0.6",
+    "@types/mime": "^4.0.0",
+    "@types/path-browserify": "^1.0.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4",
+    "unocss": "^0.61.5",
+    "vite": "^5.3.5",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "wrangler": "^3.67.1"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
