--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "bolt-diy",
+  "private": true,
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
+  },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.28",
     "@ai-sdk/google": "^0.0.20",
@@ -36,7 +46,7 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "ai": "^3.2.37",
-    "chalk": "^5.3.0",
+    "chalk": "^5.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,7 +63,7 @@
     "mime": "^4.0.4",
     "nanostores": "^0.10.3",
     "octokit": "^4.0.2",
-    "ollama-ai-provider": "0.1.10",
+    "ollama-ai-provider": "1.2.0",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
@@ -70,7 +80,7 @@
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4",
-    "@modelcontextprotocol/sdk": "^0.0.8",
+    "@modelcontextprotocol/sdk": "0.0.8",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "rehype-sanitize": "^7.0.0",
